# mobile-bench-rs

./: .gitignore  .markdownlint.json  BENCH_SDK_INTEGRATION.md  BROWSERSTACK_CI_INTEGRATION.md  BROWSERSTACK_METRICS.md  BUILD.md  CLAUDE.md  Cargo.toml  FETCH_RESULTS_GUIDE.md  IMPROVEMENTS.md  LICENSE.md  PROJECT_PLAN.md  README.md  TESTING.md  mobench-0.1.10-dx-report.md  mobench-0.1.11-dx-report.md  mobench-0.1.9-dx-report.md  mobench-bugs-summary.md  mobench-dx-spec.md  mobench-ios-xcuitest-report-gap.md  mobench-local-build-dx-report.md  run-summary.json  test_browserstack.sh
.github/actions/mobench/: action.yml
.github/workflows/: mobile-bench.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
android/: .gitignore  README.md  build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/androidTest/java/dev/world/bench/: MainActivityTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/world/bench/: MainActivity.kt
android/app/src/main/java/uniffi/sample_fns/: sample_fns.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
crates/bench-cli/: Cargo.toml
crates/bench-cli/src/: browserstack.rs  main.rs
crates/bench-macros/: Cargo.toml
crates/bench-macros/src/: lib.rs
crates/bench-runner/: Cargo.toml
crates/bench-runner/src/: lib.rs
crates/bench-sdk/: Cargo.toml
crates/bench-sdk/src/: codegen.rs  lib.rs  registry.rs  runner.rs  types.rs
crates/bench-sdk/src/builders/: android.rs  ios.rs  mod.rs
crates/mobench/: Cargo.toml  README.md
crates/mobench-macros/: Cargo.toml  README.md
crates/mobench-macros/src/: lib.rs
crates/mobench-runner/: Cargo.toml  README.md
crates/mobench-runner/src/: lib.rs
crates/mobench-sdk/: Cargo.toml  README.md
crates/mobench-sdk/src/: codegen.rs  ffi.rs  lib.rs  registry.rs  runner.rs  timing.rs  types.rs  uniffi_types.rs
crates/mobench-sdk/src/builders/: android.rs  common.rs  ios.rs  mod.rs
crates/mobench-sdk/templates/android/: .gitignore  README.md  build.gradle  gradle.properties
crates/mobench-sdk/templates/android/app/: build.gradle  proguard-rules.pro
crates/mobench-sdk/templates/android/app/src/main/: AndroidManifest.xml
crates/mobench-sdk/templates/android/app/src/main/java/: MainActivity.kt.template
crates/mobench-sdk/templates/android/app/src/main/res/values/: themes.xml
crates/mobench-sdk/templates/ios/BenchRunner/: .gitignore  README.md  project.yml.template
crates/mobench-sdk/templates/ios/BenchRunner/BenchRunner/: BenchRunner-Bridging-Header.h.template  BenchRunnerFFI.swift.template  ContentView.swift.template
crates/mobench-sdk/templates/ios/BenchRunner/BenchRunnerUITests/: BenchRunnerUITests.swift.template
crates/mobench/src/: browserstack.rs  config.rs  lib.rs  main.rs
crates/mobench/templates/ci/: action.README.md  mobile-bench.yml
crates/sample-fns/: Cargo.toml  build.rs  cbindgen.toml
crates/sample-fns/src/: 1.rs  lib.rs  sample_fns.udl
docs/: SETUP_TEARDOWN_DESIGN.md
examples/basic-benchmark/: Cargo.toml  build.rs
examples/basic-benchmark/src/: lib.rs
examples/ffi-benchmark/: Cargo.toml
examples/ffi-benchmark/src/: lib.rs
ios/BenchRunner/: project.yml
ios/BenchRunner/BenchRunner/: BenchRunner-Bridging-Header.h  BenchRunnerApp.swift  BenchRunnerFFI.swift  ContentView.swift  Info.plist
ios/BenchRunner/BenchRunnerUITests/: BenchRunnerUITests.swift
scripts/: bindgen.rs  build-android-app.sh  build-android.sh  build-ios.sh  generate-bindings.sh  sync-android-libs.sh
templates/android/: README.md  settings.gradle
templates/android/app/: build.gradle
templates/android/app/src/androidTest/java/: MainActivityTest.kt.template
templates/android/app/src/main/java/: MainActivity.kt.template
templates/android/app/src/main/res/values/: strings.xml
templates/ios/BenchRunner/: README.md  project.yml
templates/ios/BenchRunner/BenchRunner/: BenchRunnerApp.swift.template  BenchRunnerFFI.swift.template  ContentView.swift.template
templates/ios/BenchRunner/BenchRunnerUITests/: BenchRunnerUITests.swift.template
