[workspace]
members = [
    "crates/mobench",
    "crates/bench-runner",
    "crates/mobench-macros",
    "crates/mobench-sdk",
    "crates/sample-fns",
    "examples/basic-benchmark",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
serde_yaml = "0.9"
toml = "0.8"
uniffi = "0.28"

# Phase 1: Registry and proc macros
inventory = "0.3"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Phase 1: Template embedding
include_dir = "0.7"
