[package]
name = "bench-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bench-sdk = { path = "../bench-sdk" }
bench-runner = { path = "../bench-runner" }
sample-fns = { path = "../sample-fns" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json", "multipart"] }
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
