[package]
name = "mobench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Dominik Clemente - dcbuilder.eth <dc@world.org>"]
description = "Mobile benchmarking CLI for Rust - Run benchmarks on real Android and iOS devices"
repository = "https://github.com/worldcoin/mobile-bench-rs"
documentation = "https://docs.rs/mobench"
readme = "README.md"
keywords = ["benchmark", "mobile", "android", "ios", "performance"]
categories = ["development-tools", "command-line-utilities"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

default-run = "mobench"

# Dual binary targets allow the tool to work as both:
# - `mobench run ...` (direct invocation)
# - `cargo mobench run ...` (cargo subcommand)
# This is a standard Rust pattern for cargo extensions.
[[bin]]
name = "mobench"
path = "src/main.rs"

[[bin]]
name = "cargo-mobench"
path = "src/bin/cargo-mobench.rs"

[dependencies]
anyhow.workspace = true
mobench-sdk = { version = "0.1.8", path = "../mobench-sdk" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json", "multipart"] }
dotenvy = "0.15"
time.workspace = true

[dev-dependencies]
tempfile = "3"
inventory = "0.3"
sample-fns = { path = "../sample-fns" }
