[package]
name = "sample-fns"
version.workspace = true
edition = "2021"  # UniFFI 0.28 generates code for edition 2021
license.workspace = true

[lib]
name = "sample_fns"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mobench-sdk = { path = "../mobench-sdk", default-features = false, features = ["runner-only"] }
uniffi = { workspace = true, features = ["cli"] }
thiserror.workspace = true
uniffi_bindgen = { version = "0.28", optional = true }
camino = { version = "1.1", optional = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[[bin]]
name = "generate-bindings"
path = "src/bin/generate-bindings.rs"
required-features = ["bindgen"]

[features]
bindgen = ["uniffi_bindgen", "camino"]
