[package]
name = "basic-benchmark"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
name = "basic_benchmark"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Use mobench-sdk for the #[benchmark] macro and registry
mobench-sdk = { path = "../../crates/mobench-sdk" }
inventory.workspace = true
